[workspace]
resolver = "2"
members = ["packages/ui", "packages/web", "packages/desktop", "packages/mobile", "packages/api"]

[workspace.dependencies]
dioxus = { version = "0.7.1" }

# Shared dependencies for all packages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Backend-specific (api package)
portable-pty = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws"] }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
