[workspace]
resolver = "2"
members = ["packages/api", "packages/desktop", "packages/mobile", "packages/contracts", "packages/ui", "packages/web"]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
serde = "1.0"
serde_json = "1.0"

# workspace
api = { path = "packages/api" }
contracts = { path = "packages/contracts" }
ui = { path = "packages/ui" }
